--- a/Dockerfile.oracle
+++ b/Dockerfile.oracle
@@ -1,16 +1,23 @@
-FROM ruby:2.3.6
+FROM ruby:2.3.6-slim
 
 RUN mkdir -p /opt/homs
 RUN mkdir -p /opt/oracle
 
 COPY instantclient*.zip /opt/oracle/
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
+  build-essential \
+  git \
   libaio1 \
   libpq-dev \
-  libqtwebkit-dev \
+  libxml2 \
+  libxml2-dev \
+  libxslt-dev \
+  make \
   nodejs \
+  pkg-config \
   postgresql-client \
+  ruby-dev \
   unzip
 
 WORKDIR /opt/oracle
@@ -34,10 +41,10 @@ WORKDIR /opt/homs
 
 COPY Gemfile Gemfile.lock Rakefile config.ru /opt/homs/
 COPY hbw/ /opt/homs/hbw/
+ENV NOKOGIRI_USE_SYSTEM_LIBRARIES=1
 
-RUN gem install bundler
-RUN bundle config --global frozen 1
-RUN bundle --with oracle
+RUN gem install bundler && bundle config --global frozen 1
+RUN bundle --with oracle --without test
 
 COPY app/      /opt/homs/app/
 COPY bin/      /opt/homs/bin/
@@ -62,5 +69,5 @@ RUN cp -r /opt/homs/config/* /tmp/config
 EXPOSE 3000
 
 USER homs
-
+WORKDIR /opt/homs
 ENTRYPOINT ["/entrypoint.sh"]
